sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: 'while' expected but 'for' found.
    } for (i<- 0 to getNombreValeurs()-2)
      ^AlgCocktailSort1:8: error: '(' expected but ';' found.
    do {
^AlgCocktailSort1:10: error: 'while' expected but 'for' found.
    } for (i<- getNombreValeurs()-2 to 0)
      ^AlgCocktailSort1:11: error: '(' expected but '}' found.
  }
  ^